Adding vercel config.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "name": "motivational-pharases",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
-    "dev": "node --watch index.js"
+    "start": "node ./index.js",
+    "dev": "node --watch ./index.js"
   },
   "keywords": [
     "api",
