--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple app to generate motivational phrases from a local Mini-API made with Express.js.",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": { 
-    "node": "20.x" 
+  "engines": {
+    "node": "20.x"
   },
   "scripts": {
     "build": "node ./index.js",
@@ -21,5 +21,7 @@
   "dependencies": {
     "express": "4.19.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/express": "5.0.0"
+  }
 }
